WDZO-1318: added prevention of multiple button presses; fixed css in Dashboard
Squashed commit of the following:

commit 643e2f8f4b0522e70209490fa6c6932d5605d797
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Wed Jan 20 10:27:52 2021 +0300

    WDZO-1318: refactored

commit 026c8ddba2808687be8154752a685a0d177efe01
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Tue Jan 19 17:28:32 2021 +0300

    WDZO-1318: fixed css in Dashboard

commit cf51c3063f553303b2a9e45ed497255c83178967
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Tue Jan 19 14:58:58 2021 +0300

     WDZO-1318: added prevention of multiple button presses in Dashboard; refactored

commit f4a37d544aa4a599b0fb8108f2d73888cf71c2c7
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Tue Jan 19 13:58:53 2021 +0300

     WDZO-1318: added prevention of multiple button presses in old version of Users

commit a8b84d2ce9859751b1b722d78843bf5ca18b4ee0
Author: Запрягаев Александр Евгеньевич <AEvZapryagaev@sberbank.ru>
Date:   Tue Jan 19 12:29:43 2021 +0300

    WDZO-1318: added prevention of multiple button presses in Files; func sleep() added

--- a/src/containers/Dashboard/Dashboard.module.css
+++ b/src/containers/Dashboard/Dashboard.module.css
@@ -80,8 +80,7 @@ button:last-child {
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: stretch;
-    flex-grow: 1;
-    padding: 16px;
+    padding: 16px 8px;
     background-color: #f0f2f5;
 }
 
